corpus/doctypes.txt
================================================================================
DOCTYPE #1
================================================================================
<!DOCTYPE greeting [
    <!ELEMENT greeting (#PCDATA)>
]>
--------------------------------------------------------------------------------

(document
  (prolog
    (doctype_decl
      (doctype)
      (element_decl
        (element_name)
        (content_spec
          (mixed))))))

================================================================================
DOCTYPE #2 (extra spaces)
================================================================================
<!DOCTYPE    greeting   [
  <!ELEMENT  greeting  (#PCDATA) >
] >
--------------------------------------------------------------------------------

(document
  (prolog
    (doctype_decl
      (doctype)
      (element_decl
        (element_name)
        (content_spec
          (mixed))))))
